AutoEquip QoL improvements
- Items will equip automatically, even when doing certain animations
- Added "LockEquipSlots" option if people would like that

--- a/RandomiserPreferences.ini
+++ b/RandomiserPreferences.ini
@@ -3,10 +3,11 @@
 SaveProgress = True
 RandomiseHeals = True
 RandomiseKeys = False
-RandomsierMessage = True
+RandomsierMessage = False
 
 [AutoEquip]
 
 AutoEquipToggle = True
-NoWeaponRequirements = True
+LockEquipSlots = False
+NoWeaponRequirements = False
 
