New feature: CatalystsLeftHand
Put all staves, Flames, Talismans & Chimes in the left hand if appropriate ini-file option enabled.

--- a/RandomiserPreferences.ini
+++ b/RandomiserPreferences.ini
@@ -10,4 +10,4 @@ RandomsierMessage = False
 AutoEquipToggle = True
 LockEquipSlots = False
 NoWeaponRequirements = False
-
+CatalystsLeftHand = True
